# sdl2-game

./: CMakeLists.txt  main.cpp
src/: Game.cpp  main.cpp
src/include/: Game.hpp
